Remove DCHECK from the component updater background downloader code.

The threading issue needs to be fixed according to crbug.com/644857

R=waffles
BUG=644854

Review-Url: https://codereview.chromium.org/2322733002
Cr-Commit-Position: refs/heads/master@{#417103}