components/update_client/background_downloader_win.cc
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <functional>
 #include <iomanip>
 #include <limits>
+#include <memory>
 #include <utility>
 #include <vector>
 
@@ -874,8 +875,8 @@ HRESULT BackgroundDownloader::ClearGit() {
   };
 
   for (auto cookie : cookies) {
-    hr = git->RevokeInterfaceFromGlobal(cookie);
-    DCHECK(SUCCEEDED(hr));
+    // TODO(sorin): check the result of the call, see crbug.com/644857.
+    git->RevokeInterfaceFromGlobal(cookie);
   }
 
   return S_OK;
